# freecoin-legacy

./: .gitignore  Makefile  README.md  all.exe.stackdump  block.chain  log.txt  main.py  notes  oldREADME.md  project  run.bat
OLD/: README.md
docs/: mining  network
docs/OLD/: block.chain
include/: array.h  bignum.h  blockchain.h  blocks.h  build.h  coins.h  crypto.h  data.h  freecoin.h  network.h  printing.h  queue.h  shared.h  transactions.h  util.h  validation.h
lib/wolfssl-3.6.0/: wolfssl-ntru.vcproj  wolfssl.vcproj
module/: mine.py
modules/: Error.py  crypto.py  txgen.py  util.py
old-include/: blockchain.h  blocks.h  crypto.h  network.h  printing.h  shared.h  util.h
old-src/mine/: mine.c
old-src/shared/: blockchain.c  transactions.c  util.c
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  array.c  base58.cpp  base58.h  bignum.c  bitcoin-tx.cpp  bitcoind.cpp  blockchain.c  blocks.c  blocks.h  bloom.cpp  bloom.h  build.c  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.c  coins.cpp  coins.h  (+95 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: params.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/mine/: mine.c
src/net-testing/: about  client.c  server.c  temp-net-send-example.c
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  freecoin_locale.qrc  freecoinaddressvalidator.h  freecoingui.h  freecoinstrings.cpp  freecoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  (+65 more)
src/qt/forms/: addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: freecoinconsensus.cpp  freecoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  freecoin-util-test.py  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  pow_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_bitcoin.cpp  (+6 more)
src/test/data/: README.md  bitcoin-util-test.json
src/univalue/: gen.cpp  univalue.cpp  univalue.h  univalue_escapes.h  univalue_read.cpp  univalue_write.cpp
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
